<resources>
    <string name="app_name">کارگاه سرو</string>

    <string name="start_app_button_text">شروع کنید</string>
    <string name="all_string_next">بعدی</string>
    <string name="all_string_previous">قبلی</string>
    <string name="text_fix_login_pass">ورود</string>


    <string name="text_preference_slider_is_show">slider_is_show</string>
    <string name="text_register">ثبت نام</string>
    <string name="text_enter_user_name">نام کاربری خود را وارد نمایید</string>
    <string name="text_enter_password">رمز عبورتان را وارد کنید</string>
    <string name="text_chk_remember_me">مرا به خاطر بسپار</string>
    <string name="text_fix_register">ثبت نام</string>
    <string name="text_activation">کد فعال سازی 6 رقمی ارسال شده به شماره شما را وارد کنید</string>
    <string name="text_activaion_code">کد فعال سازی</string>
    <string name="text_enter">ورود</string>
    <string name="text_name_family">نام و نام خانوادگی</string>
    <string name="text_company_name">عنوان شرکت / مجموعه</string>
    <string name="text_mobile">تلفن همراه</string>
    <string name="text_password">کلمه ی عبور</string>
    <string name="text_confirm_password">تکرار کلمه ی عبور</string>

    <string name="error_net_title">اینترنت درستگاه شما قطع می باشد</string>
    <string name="internet_connection_error">اتصال دستگاه شما به اینترنت برقرار نیست. برای استفاده از خدمات شیراز سرویس به اینترنت متصل شوید.</string>
    <string name="internet_connection_error_title">خطا در اتصال به اینترنت!</string>
    <string name="internet">اینترنت</string>
    <string name="exit">خروج</string>
    <string name="internet_try_again">تلاش مجدد</string>
    <string name="title_home">خانه</string>


    <string name="type_one">ام دی اف</string>
    <string name="type_two">نئوپان ملامینه</string>


    <string name="oneTtwoW">1طول، 2عرض</string>
    <string name="oneToneW">1طول، 1عرض</string>
    <string name="twoToneW">2طول، 1عرض</string>
    <string name="twoTtwoW">2طول، 2عرض</string>
    <string name="text_select_one">لطفا یه گزینه را انتخاب نمایید</string>
    <string name="text_order">ثبت برش</string>
    <string name="text_activation_code">ورود کد فعال سازی</string>
    <string name="text_error_select_one">لطفا یک گزینه را انتخاب نمایید</string>
    <string name="text_paper_count">تعداد هر ورق را وارد نمایید.</string>
    <string name="text_pvc_color">رنگ pvc مورد نظر خود را وارد نمایید.</string>
    <string name="text_wood_color">رنگ چوب مورد نظر خود را وارد نمایید.</string>
    <string name="text_order_detail">جزئیات سفارش</string>
    <string name="text_order_done">تایید سفارش</string>
    <string name="text_order_save">ثبت برش</string>
    <string name="text_order_correct">اصلاح</string>
    <string name="text_password_lenght">حداقل طول رمز عبور 6 کاراکتر می باشد</string>
    <string name="text_repeat_password">کلمه عبور با تکرار آن همخوانی ندارد</string>

    <string name="text_exit_app">پس از خروج از حساب کاربری، بایستی مجددا وارد نرم افزار شوید،</string>
    <string name="text_exit_app_confirmation">آیا از انجام این عملیات اطمینان دارید؟</string>

    <string name="speech_intent_extra_fa">fa</string>
    <string name="speech_intent_action">android.speech.action.RECOGNIZE_SPEECH</string>
    <string name="speech_intent_extra_lang">android.speech.extra.LANGUAGE</string>
    <string name="speech_intent_extra_prompt">android.speech.extra.PROMPT</string>
    <string name="ap_service_group">ir.Sarv-Wood.general.service_group</string>
    <string name="app_request_preferences">sarv_wood_request_pref_file</string>
    <string name="app_general_preferences">sarv_wood_general_pref_file</string>
    <string name="sub_category_post_items_count">sub_category_post_items_count</string>
    <string name="speech_intent_extra_lang_ref">android.speech.extra.LANGUAGE_PREFERENCE</string>
    <string name="speech_intent_extra_lang_ref_only">android.speech.extra.ONLY_RETURN_LANGUAGE_PREFERENCE</string>

    <string name="speech_prompt">لطفاً صحبت کنید</string>
    <string name="speech_not_supported">متاسفانه دستگاه شما ورودی صدا را پشتیبانی نمی کند</string>
    <string name="text_select_width_length">طول و عرض مورد نظر را انتخاب نمایید.</string>
    <string name="text_need_value">مقادیر لازم را وارد نمایید</string>
    <string name="text_pvc_thickness">ضخامت pvc را انتخاب نمایید.</string>
    <string name="text_select_wood_type">نوع چوب را انتخاب نمایید.</string>
    <string name="text_call_us">تماس با ما</string>
    <string name="text_more_info">اطلاعات بیشتر</string>
    <string name="text_yes">بله</string>
    <string name="text_no">خیر</string>
    <string name="text_exit_title">خروج از حساب کاربری</string>
    <string name="text_exit_account">خروج از حساب کاربری</string>
    <string name="text_register_suggest">ثبت</string>
    <string name="text_repeat_activation_code">با تغییر شماره موبایل، بایستی مجددا به برنامه وارد شوید.</string>

    <string name="text_help_one"><![CDATA[<br>در این لیست، تمام سفارشات شما، نمایش داده می شود.</br>
<br>جهت ویرایش یا مشاهده ی جزییات روی ردیف مربوطه کلیک نمایید.</br>
<br>جهت ثبت سفارش جدید بر روی دکمه<b> « به اضافه »</b> در قسمت پایین همین صفحه، کلیک نمایید.</br>
]]></string>

    <string name="text_name_social_apparat">آپارات</string>
    <string name="text_name_social_telegram">تلگرام</string>
    <string name="text_name_social_insta">اینستاگرام</string>
    <string name="nav_social">ما را در شبکه های اجتماعی دنبال کنید</string>
    <string name="dlg_title_close_dialog">بستن</string>
    <string name="text_send_order">ثبت سفارش</string>
    <string name="text_new_order">برش جدید</string>
    <string name="text_edit_profile">ویرایش اطلاعات کاربری</string>
    <string name="text_about_us">درباره ما</string>
    <string name="text_suggest">پیشنهاد، نظر ،انتقاد</string>
    <string name="text_pre_order">لیست پیش سفارش</string>
    <string name="text_successful">عملیات ذخیره با موفقیت انجام شد.</string>
    <string name="text_order_item_detail">جزییات سفارش</string>
    <string name="text_contact_us">تماس با ما</string>
    <string name="text_suggest_kind">لطفا نوع متن ارسالی خود را مشخص نمایید</string>
    <string name="text_suggest_input">لطفا متن  خود را وارد نمایید</string>
    <string name="text_save_edit_profile">ذخیره تغییرات</string>
    <string name="text_address">آدرس</string>
    <string name="text_need_all_parameter">پرکردن تمامی مقادیر الزامی می باشد</string>
    <string name="text_phone">تلفن</string>
    <string name="text_log_in_again">لطفا مجددا وارد برنامه شوید</string>

    <string name="text_new_version_title">ورژن جدید</string>
    <string name="text_download_new_version">دریافت نسخه ی جدید</string>
    <string name="text_obligation_update">لطفا، نسخه ی برنامه ی خود را ارتقا دهید.</string>
    <string name="text_optional_update">نسخه ی جدیدی وجود دارد، آیا مایل به بروزرسانی هستید؟</string>

    <string name="text_cancel">انصراف</string>


    <string name="text_product_member_one">سولماز زارع مهذبیه [ 09303339116 ]</string>
    <string name="text_product_member_two">قاسم آقابابائی [ 09177189730 ]</string>
    <string name="text_change_pass">تغییر کلمه عبور</string>
    <string name="text_choose_sirection">لطفا جهت طول و عرض را انتخاب نمایید</string>
    <string name="text_no_item_add">هنوز ردیف سفارش ثبت نشده است</string>
    <string name="text_add_row_by_click">جهت اضافه کردن، سفارش خود بر روی دکمه ی برش جدید کلیک نمایید.</string>
    <string name="text_discard_done">سفارش شما لغو گردید</string>
    <string name="text_cancel_order">مشتری گرامی; لطفا دلیل لغو این سفارش را به ما بگویید تا بتوانیم در سفارشات بعدی، رضایت شما را جلب نمایید.</string>
    <string name="text_cancel_title">انتخاب گزینه های لغو سفارش</string>
    <string name="text_order_status">تعیین وضعیت سفارش</string>
    <string name="text_successful_activation">عملیات فعال سازی با موفقیت انجام شد</string>
    <string name="text_all_tap_back_button">لطفا برای خروج کلید بازگشت را مجددا فشار دهید.</string>
    <string name="text_please_wait">لطفا منتظر بمانید</string>
    <string name="text_can_edit">تنها وضعیت ثبت شده قابل ویرایش می باشد</string>

</resources>
