<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_4_dp"
    android:background="@color/colorWhite"
    android:layoutDirection="rtl">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_dp_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/iran_sans_light"
                    android:padding="@dimen/dimen_dp_tiny"
                    android:text="@string/text_name_family"
                    android:textSize="@dimen/dimen_sp_small"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_for_edits"
                    android:padding="@dimen/dimen_dp_small"
                    android:textSize="@dimen/dimen_sp_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_caption" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_dp_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_company_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/iran_sans_light"
                    android:padding="@dimen/dimen_dp_tiny"
                    android:text="@string/text_company_name"
                    android:textSize="@dimen/dimen_sp_small"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_for_edits"
                    android:padding="@dimen/dimen_dp_small"
                    android:textSize="@dimen/dimen_sp_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company_caption" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_dp_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_mobile_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/iran_sans_light"
                    android:padding="@dimen/dimen_dp_tiny"
                    android:text="@string/text_mobile"
                    android:textSize="@dimen/dimen_sp_small"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_for_edits"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="11"
                    android:padding="@dimen/dimen_dp_small"
                    android:textSize="@dimen/dimen_sp_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mobile_caption" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlackStep_2"
                    android:fontFamily="@font/iran_sans_medium"
                    android:textSize="@dimen/text_size_10_sp"
                    android:text="@string/text_repeat_activation_code"
                    app:layout_constraintRight_toRightOf="@+id/et_mobile"
                    app:layout_constraintTop_toBottomOf="@+id/et_mobile"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_dp_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/tv_pass_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/iran_sans_light"
                    android:padding="@dimen/dimen_dp_tiny"
                    android:text="@string/text_password"
                    android:textSize="@dimen/dimen_sp_small"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_for_edits"
                    android:gravity="center"
                    android:inputType="numberPassword"
                    android:padding="@dimen/dimen_dp_small"
                    android:textSize="@dimen/dimen_sp_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pass_caption" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_dp_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/tv_pass_caption_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/iran_sans_light"
                    android:padding="@dimen/dimen_dp_tiny"
                    android:text="@string/text_confirm_password"
                    android:textSize="@dimen/dimen_sp_small"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_for_edits"
                    android:gravity="center"
                    android:inputType="numberPassword"
                    android:padding="@dimen/dimen_dp_small"
                    android:textSize="@dimen/dimen_sp_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pass_caption_confirm" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_register"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="@dimen/dimen_dp_zero"
    android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_dp_small"
    android:background="@drawable/button_style_green"
    android:fontFamily="@font/iran_sans_bold"
    android:text="@string/text_register"
    android:textColor="@color/colorWhite"
    android:textSize="@dimen/dimen_sp_small"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
