<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:layoutDirection="rtl">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_activation"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_marginTop="@dimen/dimen_dp_most_huge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:srcCompat="@drawable/activation_code" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_alarm_activation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_dp_medium"
        android:fontFamily="@font/iran_sans"
        android:text="@string/text_activation"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dimen_sp_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_activation" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_activation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_dp_very_very_huge"
        android:padding="@dimen/dimen_dp_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alarm_activation">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_company_caption"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/iran_sans_light"
            android:padding="@dimen/dimen_dp_tiny"
            android:text="@string/text_activaion_code"
            android:textSize="@dimen/dimen_sp_small"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_activation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_for_edits"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="6"
            android:padding="@dimen/dimen_dp_small"
            android:textSize="@dimen/dimen_sp_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_company_caption" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_dp_very_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/const_activation">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="59"
            android:textColor="@color/color_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_dp_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_seconds">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sms_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_light"
            android:padding="@dimen/dimen_dp_tiny"
            android:text="دریافت مجدد کد فعال سازی"
            android:textSize="@dimen/dimen_sp_small"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enter"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/dimen_dp_zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_dp_small"
        android:background="@drawable/button_style_green"
        android:fontFamily="@font/iran_sans_bold"
        android:text="@string/text_enter"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimen_sp_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
